@@ -908,6 +908,14 @@ event=RepeatStatusMessage
 label=Message Repeat
 location=7
 
+mode=Info3
+type=key
+data=9
+event=Frequencies
+event=Mode default
+label=Frequencies
+location=8
+
 # -------------
 # mode=Menu
 # -------------
@@ -1287,6 +1295,13 @@ event=Exit
 label=Quit XCSoar
 location=35
 
+mode=RemoteStick
+type=key
+data=0
+event=Frequencies
+label=Frequencies
+location=36
+
 # -------------
 # Define gesture to open Quickmenu without keyboard or remote
 # ("Draw a button on the screen")
@@ -1295,4 +1310,3 @@ location=35
 mode=default
 type=gesture
 data=ULDR
-event=QuickMenu
