@@ -286,6 +286,7 @@ will be placed in the  \texttt{XCSoarData} directory (Windows PC,
 Windows and Android mobile devices), or the \texttt{.xcsoar} directory (Unix/Linux
 PC).  From the first run, XCSoar will create and maintain the files
 \texttt{user.cup} (user-edited waypoints),
+\texttt{user.freq} (user-edited radio frequency list),
 \texttt{Default.tsk} (Default Task),  
 \texttt{default.prf} 
 (configuration settings),
