@@ -71,6 +71,7 @@ https://xcsoar.readthedocs.io/en/latest/input_events.html
 #include "Components.hpp"
 #include "BackendComponents.hpp"
 #include "DataComponents.hpp"
+#include "Dialogs/Frequency/dlgUserFrequencyList.hpp"
 
 #include <cassert>
 #include <tchar.h>
@@ -305,6 +306,13 @@ void
 InputEvents::eventChecklist([[maybe_unused]] const TCHAR *misc)
 {
   dlgChecklistShowModal();
+}
+
+// User Frequencies List
+void
+InputEvents::eventFrequencies([[maybe_unused]] const TCHAR *misc)
+{
+  dlgUserFrequencyListWidgetShowModal(UserFrequencyListWidget::DialogMode::BROWSE);
 }
 
 // Status
