@@ -33,6 +33,7 @@ Version 7.44 - not yet released
   - BigTrafficWidget: zoom range to 5km when opening big radar via the FlarmGauge
   - terrain: added 2 new terrain ramps for use in very flat countries
   - add head wind component to V GND Infobox #1439
+  - Added user-defined frequency list dialog
 * Android
   - fix crash on startup when loading icons on ldpi screens
   - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
